Create css file and include its in index.html

--- a/lesson1/homework/index.html
+++ b/lesson1/homework/index.html
@@ -1,11 +1,38 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title></title>
+  <title>lesson1/homework</title>
 </head>
 <body>
   <div id="playground">
+    <div class="div-table">
+      <div class="div-table-row">
+        <div class="div-table-col">
+        </div>
+        <div class="div-table-col">
+        </div>
+        <div class="div-table-col">
+        </div>
+      </div>
+      <div class="div-table-row">
+        <div class="div-table-col">
+        </div>
+        <div class="div-table-col">
+        </div>
+        <div class="div-table-col">
+        </div>
+      </div>
+      <div class="div-table-row">
+        <div class="div-table-col">
+        </div>
+        <div class="div-table-col">
+        </div>
+        <div class="div-table-col">
+        </div>
+      </div>
+    </div>
   </div>
   <script src="js/game.js"></script>
 </body>
