--- a/lesson1/homework/index.html
+++ b/lesson1/homework/index.html
@@ -9,27 +9,27 @@
   <div id="playground">
     <div class="div-table">
       <div class="div-table-row">
-        <div class="div-table-col">
+        <div class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col">
+        <div class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col">
-        </div>
-      </div>
-      <div class="div-table-row">
-        <div class="div-table-col">
-        </div>
-        <div class="div-table-col">
-        </div>
-        <div class="div-table-col">
+        <div class="div-table-col" onclick="stroke(this);">
         </div>
       </div>
       <div class="div-table-row">
-        <div class="div-table-col">
+        <div class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col">
+        <div class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col">
+        <div class="div-table-col" onclick="stroke(this);">
+        </div>
+      </div>
+      <div class="div-table-row">
+        <div class="div-table-col" onclick="stroke(this);">
+        </div>
+        <div class="div-table-col" onclick="stroke(this);">
+        </div>
+        <div class="div-table-col" onclick="stroke(this);">
         </div>
       </div>
     </div>
