--- a/lesson1/homework/index.html
+++ b/lesson1/homework/index.html
@@ -33,6 +33,9 @@
         </div>
       </div>
     </div>
+    <button onclick="initializeGame()">
+      New game
+    </button>
   </div>
   <script src="js/game.js"></script>
 </body>
