Add id for cells in index.html

--- a/lesson1/homework/index.html
+++ b/lesson1/homework/index.html
@@ -9,27 +9,27 @@
   <div id="playground">
     <div class="div-table">
       <div class="div-table-row">
-        <div class="div-table-col" onclick="stroke(this);">
+        <div id="cell_0_0" class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col" onclick="stroke(this);">
+        <div id="cell_0_1" class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col" onclick="stroke(this);">
-        </div>
-      </div>
-      <div class="div-table-row">
-        <div class="div-table-col" onclick="stroke(this);">
-        </div>
-        <div class="div-table-col" onclick="stroke(this);">
-        </div>
-        <div class="div-table-col" onclick="stroke(this);">
+        <div id="cell_0_2" class="div-table-col" onclick="stroke(this);">
         </div>
       </div>
       <div class="div-table-row">
-        <div class="div-table-col" onclick="stroke(this);">
+        <div id="cell_1_0" class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col" onclick="stroke(this);">
+        <div id="cell_1_1" class="div-table-col" onclick="stroke(this);">
         </div>
-        <div class="div-table-col" onclick="stroke(this);">
+        <div id="cell_1_2" class="div-table-col" onclick="stroke(this);">
+        </div>
+      </div>
+      <div class="div-table-row">
+        <div id="cell_2_0" class="div-table-col" onclick="stroke(this);">
+        </div>
+        <div id="cell_2_1" class="div-table-col" onclick="stroke(this);">
+        </div>
+        <div id="cell_2_2" class="div-table-col" onclick="stroke(this);">
         </div>
       </div>
     </div>
